fix: Fix incorrect latency conversion bug in benchmark reports
- Created centralized MetricConversionUtil as single source of truth for all metric conversions
- Fixed critical bug where "us/op" was matching "s/op" substring, causing multiply by 1000 instead of divide
- Reordered unit checks to test more specific units (ns/op, us/op) before less specific ones (s/op)
- Refactored ReportGenerator and BadgeGenerator to use centralized conversion utility
- Added comprehensive unit tests for MetricConversionUtil
- Added regression test in ReportGeneratorTest to catch latency display issues
- Removed debugging/exploration test files

The bug was causing microsecond latencies (e.g., 802.9 us/op) to be displayed as hundreds of seconds
(865.1 s) instead of the correct millisecond value (0.8 ms).

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>